syntax="proto3";

package proto;
option go_package = "./;proto";

import "mom_common.proto";

message InvocationAuthenticationInfo {
	//ID 
 	string id=2;
	//名称 
 	string name=3;
	//IP地址 
    string iPAddress=4;
	//API密钥 
    string aPIKey=5;
	//备注 
    string remark=6;
}

message QueryInvocationAuthenticationRequest{
    // @inject_tag: uri:"pageIndex" form:"pageIndex"
    int64 pageIndex=1;
    // @inject_tag: uri:"pageSize" form:"pageSize"
    int64 pageSize=2;
    // @inject_tag: uri:"sortConfig" form:"sortConfig"
    string sortConfig=3;
    //名称
    // @inject_tag: uri:"name" form:"name"
    string name=7;
}

message QueryInvocationAuthenticationResponse{
    Code code=1;
    string message=2;
    repeated InvocationAuthenticationInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}

message GetAllInvocationAuthenticationResponse{
    Code code=1;
    string message=2;
    repeated InvocationAuthenticationInfo data=3;
}

message GetInvocationAuthenticationDetailResponse{
    Code code=1;
    string message=2;
    InvocationAuthenticationInfo data=3;
}